tests/instantiating/range_empty_list/stderr.golden
error: empty range property value list
bus.fbd +2:21
   |
 2 |   C config; range = []
   |                     ^^
